semi-final version of the website:

--- a/eb.html
+++ b/eb.html
@@ -9,13 +9,48 @@
 		<a href='eb.html' class='active'> Executive Board </a>
 		<a href='committees.html'> Committees </a>
 		<a href='register.html'> Register </a>
-		<a href='resources.html'> Resources </a>
+
 		<title> FISMUN - Executive Board</title>
 	</nav>
 </head>
 <body>
 	<div class='container' align="center">
 		<h1> EXECUTIVE BOARD </h1>
+			<br>
+			<div class="address card">
+				<h2 id='address-header'> ECOFIN </h2>
+				<br>
+				<div class="address-text">
+						<p>Abhay Bestrapalli</p>
+						<p>Ajay Bestrapalli</p>
+				</div>
+			</div>
+
+			<br>
+
+			<div class="address card">
+				<h2 id='address-header'> UNSC-CTC </h2>
+				<br>
+				<div class="address-text">
+						<p>Devansh Mathur</p>
+						<p>Shlok</p>
+						<p>Vedant Panamgipalli</p>
+				</div>
+			</div>
+
+			<br>
+
+			<div class="address card">
+				<h2 id='address-header'> COSN </h2>
+				<br>
+				<div class="address-text">
+						<p>Sneh Lahurikar</p>
+						<p>Rohan</p>
+				</div>
+			</div>
+
+			<br>
+
 		<footer>
 			<p> Website made by SKAR DEV 2019 </p>
 		</footer>
