WHITE ORANGE BLUE THEME

--- a/committees.html
+++ b/committees.html
@@ -4,61 +4,67 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href='css/style.css'>
-	<nav>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="js/scripts.js"></script>
+	<nav class="topnav" id="mytopnav">
 		<a href='index.html'> Home </a>
 		<a href='eb.html'> Executive Board </a>
-		<a href='committees.html'  class='active'> Committees </a>
+		<a href='committees.html' class='active'> Committees </a>
 		<a href='register.html'> Register </a>
-
-		<title> FISMUN - Committees</title>
+        <a href='gallery.html'> Gallery </a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
 	</nav>
+    <title>FISMUN - Committees</title>
 </head>
-<body>
-	<div class='container' align="center">
+<body class="text-center">
+	<div class='container-fluid btn-container' align="center">
+        <br>
 		<h1> COMMITTEES </h1>
 		<br>
-		<div class="address card">
-			<h2 id='address-header'> ECOFIN </h2>
-
-			<div class="address-text">
-				The United Nations General Assembly Second Committee (also known as the Economic and Financial Committee or ECOFIN) is one of the six main committees of the United Nations General Assembly. It deals with global finance and economic matters.
-
-The Second Committee meets every year in early October and aims to finish its work by the end of November. All 193 member states of the UN can attend.
-			<p><strong> AGENDA : </strong> -------------------------------- </p>
-			</div>
-		</div>
-
-		<br>
-
-		<div class="address card">
-			<h2 id='address-header'> UNSC-CTC </h2>
-
-			<div class="address-text">
-				The Counter-Terrorism Committee (CTC) was established by Security Council resolution 1373 (2001), which was adopted unanimously on 28 September 2001 in the wake of the 11 September terrorist attacks in the United States.
-The Committee, comprising all 15 Security Council members, was tasked with monitoring implementation of resolution 1373 (2001), which requested countries to implement a number of measures intended to enhance their legal and institutional ability to counter terrorist activities at home, in their regions, and, around the world.
-			<p><strong> AGENDA : </strong> Counter money laundering activities used to finance terrorism </p>
-			</div>
-		</div>
-
-		<br>
-
-		<div class="address card">
-			<h2 id='address-header'> COSN </h2>
-
-			<div class="address-text">
-				Welcome, delegates of The Confederation Of Sovereign Nations. All of you have been assembled for the Crisis Protocol of 1986.
-
-The world is in a fragile state. A tipping of balance could result in another war, the outcomes too devastating to imagine. With the build-up of nuclear, biological and radiological weaponry the stakes at risk are the world in which we reside.
-
-World economy being in the hands of the four major powers: United States of America, USSR, UK and Imperial Japan but their dominance is diminishing from their control due to emergence of newer, developing economies which can lead to economic devastation if markets are not regulated.
-			<p><strong> AGENDA : </strong> CRISIS </p>
-			</div>
-		</div>
-
-		<br>
-
-		<footer>
-			<p> Website made by SKAR DEV 2019 </p>
-		</footer>
 	</div>
+    <div class="address container-fluid p-5">
+            <div class="card">
+                <h2 id='address-header'> ECOFIN </h2>
+
+                <div class="address-text m-3">
+                    The United Nations General Assembly Second Committee (also known as the Economic and Financial Committee or ECOFIN) is one of the six main committees of the United Nations General Assembly. It deals with global finance and economic matters.
+
+                    The Second Committee meets every year in early October and aims to finish its work by the end of November. All 193 member states of the UN can attend.
+                <p><strong> AGENDA : </strong> -------------------------------- </p>
+                </div>
+			</div>
+
+		<br>
+            <div class="card">
+                <h2 id='address-header'> UNSC-CTC </h2>
+
+                <div class="address-text m-3">
+                    The Counter-Terrorism Committee (CTC) was established by Security Council resolution 1373 (2001), which was adopted unanimously on 28 September 2001 in the wake of the 11 September terrorist attacks in the United States.
+                    The Committee, comprising all 15 Security Council members, was tasked with monitoring implementation of resolution 1373 (2001), which requested countries to implement a number of measures intended to enhance their legal and institutional ability to counter terrorist activities at home, in their regions, and, around the world.
+                <p><strong> AGENDA : </strong> -------------------------------- </p>
+                </div>
+                
+			</div>
+
+		<br>
+            <div class="card">
+                <h2 id='address-header'> COSN </h2>
+
+                <div class="address-text m-3">
+                    Welcome, delegates of The Confederation Of Sovereign Nations. All of you have been assembled for the Crisis Protocol of 1986.
+
+                    The world is in a fragile state. A tipping of balance could result in another war, the outcomes too devastating to imagine. With the build-up of nuclear, biological and radiological weaponry the stakes at risk are the world in which we reside.
+
+                    World economy being in the hands of the four major powers: United States of America, USSR, UK and Imperial Japan but their dominance is diminishing from their control due to emergence of newer, developing economies which can lead to economic devastation if markets are not regulated.
+                    <p><strong> AGENDA : </strong> CRISIS </p>
+                </div>
+                
+			</div>
+		<br>
+    </div>
+    <footer class="p-4">
+        <p> Website made by SKAR DEV 2019 </p>
+    </footer>
 </body>
