--- a/register.html
+++ b/register.html
@@ -4,18 +4,29 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href='css/style.css'>
-	<nav>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="js/scripts.js"></script>
+	<nav class="topnav" id="mytopnav">
 		<a href='index.html'> Home </a>
 		<a href='eb.html'> Executive Board </a>
 		<a href='committees.html'> Committees </a>
-		<a href='register.html'  class='active'> Register </a>
-		 
-		<title> FISMUN - Register</title>
+		<a href='register.html' class='active'> Register </a>
+        <a href='gallery.html'> Gallery </a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
 	</nav>
+    <title> FISMUN - Register</title>
 </head>
-<body>
-	<div class='container' align="center">
-		<h1> Register Now! </h1>
-		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdecuEp69nKwaiimt42eJkqzkdQea7feV8MgjDl82pBdCGPrg/viewform?embedded=true" width="640" height="1135" frameborder="0" marginheight="0" marginwidth="0" overflow='scroll'>Loading...</iframe>
+<body class="text-center">
+	<div class='container-fluid btn-container p-3' align="center">
+        <br>
+		<h1> REGISTER NOW! </h1>
+        <br>
 	</div>
+    <br>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdecuEp69nKwaiimt42eJkqzkdQea7feV8MgjDl82pBdCGPrg/viewform?embedded=true" width="640" height="1135" frameborder="0" marginheight="0" marginwidth="0" overflow='scroll'>Loading...</iframe>
+    <footer class="p-4">
+			<p> Website made by SKAR DEV 2019 </p>
+    </footer>
 </body>
