--- a/index.html
+++ b/index.html
@@ -4,37 +4,54 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href='css/style.css'>
-	<nav>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="js/scripts.js"></script>
+	<nav class="topnav" id="mytopnav">
 		<a href='index.html' class='active'> Home </a>
 		<a href='eb.html'> Executive Board </a>
 		<a href='committees.html'> Committees </a>
 		<a href='register.html'> Register </a>
-
+        <a href='gallery.html'> Gallery </a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
 	</nav>
 	<title> FISMUN - Home</title>
 </head>
 <body class="text-center">
-	<div class="container">
+	<div class="container-fluid">
 		<div id="logo-container">
-			<img src='assets/logo.png' class='img img-fluid' id="school-logo">
+			<img src='assets/logo.png' class='img-fluid' id="school-logo">
 		</div>
-		<h1> FREEDOM INTERNATIONAL SCHOOL MODEL UNITED NATIONS</h1>
+		<h1> 
+            FREEDOM INTERNATIONAL SCHOOL
+        </h1>
+        <h1>
+            MODEL UNITED NATIONS 2019
+        </h1>
+        <br>
 		<br>
-		<a href='register.html' class='btn btn-primary'> REGISTER</a>
 		<br>
-		<br>
-		<div class="address card">
-			<h2 id='address-header'> Principal's Address </h2>
-			<br>
-			<div class="address-text">
-				<img src='assets/principal.jpeg' id="principal-image">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut finibus elit maximus sollicitudin feugiat. In hac habitasse platea dictumst. Cras vitae urna quam. Fusce elementum quam ac erat sagittis mollis. Donec tempus, lacus ut suscipit ullamcorper, enim est pharetra felis, vitae pretium erat leo eu dolor. Praesent enim tellus, viverra sit amet lacus ut, ultrices aliquet tortor. Morbi lacinia sit amet ante ut egestas.
-
-				Pellentesque a cursus diam. Sed eu dui bibendum, maximus metus ac, convallis felis. Quisque turpis leo, suscipit sed mollis vel, pharetra ac nisl. Maecenas enim augue, ultricies eget egestas a, gravida non risus. Donec tincidunt leo ut odio mattis dapibus. Praesent sollicitudin, libero vitae semper dictum, sem justo malesuada nisl, varius euismod quam libero at lacus. Duis lorem nibh, consectetur id placerat a, ultricies in quam. Pellentesque ac lectus et libero euismod congue a non eros. Fusce nec dolor eget metus ultrices dignissim sed sed nunc. Aliquam erat volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin non est ut enim tempor sagittis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-			</div>
-		</div>
 	</div>
-	<footer>
+    <div class="container-fluid p-5 btn-container">
+        <p id="countdown" class="p-3 display-3"></p>
+        <a href='register.html' class='btn btn-orange'> REGISTER NOW </a>
+    </div>
+    <div class="address container-fluid p-5">
+            <div class="card">
+                <h2 id='address-header'> Principal's Address </h2>
+                <br>
+                <div class="card-body">
+                    <img src='assets/principal.jpeg' id="principal-image">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut finibus elit maximus sollicitudin feugiat. In hac habitasse platea dictumst. Cras vitae urna quam. Fusce elementum quam ac erat sagittis mollis. Donec tempus, lacus ut suscipit ullamcorper, enim est pharetra felis, vitae pretium erat leo eu dolor. Praesent enim tellus, viverra sit amet lacus ut, ultrices aliquet tortor. Morbi lacinia sit amet ante ut egestas.
+
+                    Pellentesque a cursus diam. Sed eu dui bibendum, maximus metus ac, convallis felis. Quisque turpis leo, suscipit sed mollis vel, pharetra ac nisl. Maecenas enim augue, ultricies eget egestas a, gravida non risus. Donec tincidunt leo ut odio mattis dapibus. Praesent sollicitudin, libero vitae semper dictum, sem justo malesuada nisl, varius euismod quam libero at lacus. Duis lorem nibh, consectetur id placerat a, ultricies in quam. Pellentesque ac lectus et libero euismod congue a non eros. Fusce nec dolor eget metus ultrices dignissim sed sed nunc. Aliquam erat volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin non est ut enim tempor sagittis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+                </div>
+            </div>
+			
+    </div>
+
+	<footer class="p-4">
 		<p> Website made by SKAR DEV 2019 </p>
 	</footer>
 </body>
