some minor css changes

--- a/eb.html
+++ b/eb.html
@@ -29,10 +29,8 @@
             <h2 id='address-header'> ECOFIN </h2>
             <br>
             <div class="address-text m-3">
-                <h2>Chair-person</h2>
-                <p>Abhay Bestrapalli</p>
-                <h2>Vice Chair-person</h2>
-                <p>Ajay Bestrapalli</p>
+                <h2>CHAIRPERSON</h2> <p>Abhay Bestrapalli</p>
+                <h2>VICE-CHAIRPERSON</h2><p>Ajay Bestrapalli</p>
             </div>
         </div>
         <br>
@@ -40,11 +38,9 @@
             <h2 id='address-header'> UNSC-CTC </h2>
             <br>
             <div class="address-text m-3">
-                <h2>Chair-person</h2>
-                <p>Devansh Mathur</p>
-                <h2>Co Chair-person</h2>
-                <p>Shlok</p>
-                <p>Vedant Panamgipalli</p>
+                <h2>CHAIRPERSON</h2><p>Devansh Mathur</p>
+                <h2>CO-CHAIRPERSON</h2><p>Shlok</p>
+                <h2>CO-CHAIRPERSON</h2><p>Vedant Panamgipalli</p>
             </div>
         </div>
         <br>
@@ -52,10 +48,8 @@
             <h2 id='address-header'> COSN </h2>
             <br>
             <div class="address-text m-3">
-                <h2>Chair-person</h2>
-                <p>Sneh Lahurikar</p>
-                <h2>Vice Chair-person</h2>
-                <p>Rohan</p>
+                <h2>CHAIRPERSON</h2><p>Sneh Lahurikar</p>
+                <h2>VICE-CHAIRPERSON</h2><p>Rohan</p>
             </div>
         </div>
     </div>
