Fixed the added padding in Register Heading
Good job bro Rowjee!!

--- a/register.html
+++ b/register.html
@@ -19,11 +19,11 @@
     <title> FISMUN - Register</title>
 </head>
 <body class="text-center">
-	<div class='container-fluid btn-container p-3' align="center">
+	<div class='container-fluid btn-container' align="center">
         <br>
-		<h1> REGISTER NOW! </h1>
+        <h1> REGISTER NOW! </h1>
         <br>
-	</div>
+    </div>
     <br>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdecuEp69nKwaiimt42eJkqzkdQea7feV8MgjDl82pBdCGPrg/viewform?embedded=true" width="640" height="1135" frameborder="0" marginheight="0" marginwidth="0" overflow='scroll'>Loading...</iframe>
     <footer class="p-4">
