fixed all colors, waiting on agendae and principal's address

--- a/eb.html
+++ b/eb.html
@@ -39,7 +39,7 @@
             <br>
             <div class="address-text m-3">
                 <h2>CHAIRPERSON</h2><p>Devansh Mathur</p>
-                <h2>CO-CHAIRPERSON</h2><p>Shlok</p>
+                <h2>CO-CHAIRPERSON</h2><p>Shlok Upadhyay</p>
                 <h2>CO-CHAIRPERSON</h2><p>Vedant Panamgipalli</p>
             </div>
         </div>
@@ -49,11 +49,11 @@
             <br>
             <div class="address-text m-3">
                 <h2>CHAIRPERSON</h2><p>Sneh Lahurikar</p>
-                <h2>VICE-CHAIRPERSON</h2><p>Rohan</p>
+                <h2>VICE-CHAIRPERSON</h2><p>Rohan Rajesh</p>
             </div>
         </div>
     </div>
-			
+
 
     <footer class="p-4">
 			<p> Website made by SKAR DEV 2019 </p>
