--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 		<a href='eb.html'> Executive Board </a>
 		<a href='committees.html'> Committees </a>
 		<a href='register.html'> Register </a>
-        <a href='gallery.html'> Gallery </a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-        </a>
+    <a href='gallery.html'> Gallery </a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+    </a>
+		<a href="https://www.freedom-international.in" style="float:right;"> Freedom International </a>
 	</nav>
 	<title> FISMUN - Home</title>
 </head>
@@ -23,7 +24,7 @@
 		<div id="logo-container">
 			<img src='assets/logo.png' class='img-fluid' id="school-logo">
 		</div>
-		<h1> 
+		<h1>
             FREEDOM INTERNATIONAL SCHOOL
         </h1>
         <h1>
@@ -48,7 +49,7 @@
                     Pellentesque a cursus diam. Sed eu dui bibendum, maximus metus ac, convallis felis. Quisque turpis leo, suscipit sed mollis vel, pharetra ac nisl. Maecenas enim augue, ultricies eget egestas a, gravida non risus. Donec tincidunt leo ut odio mattis dapibus. Praesent sollicitudin, libero vitae semper dictum, sem justo malesuada nisl, varius euismod quam libero at lacus. Duis lorem nibh, consectetur id placerat a, ultricies in quam. Pellentesque ac lectus et libero euismod congue a non eros. Fusce nec dolor eget metus ultrices dignissim sed sed nunc. Aliquam erat volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin non est ut enim tempor sagittis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
                 </div>
             </div>
-			
+
     </div>
 
 	<footer class="p-4">
