--- a/committees.html
+++ b/committees.html
@@ -11,10 +11,11 @@
 		<a href='eb.html'> Executive Board </a>
 		<a href='committees.html' class='active'> Committees </a>
 		<a href='register.html'> Register </a>
-        <a href='gallery.html'> Gallery </a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-        </a>
+    <a href='gallery.html'> Gallery </a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+    </a>
+		<a href="https://www.freedom-international.in" style="float:right;"> Freedom International </a>
 	</nav>
     <title>FISMUN - Committees</title>
 </head>
@@ -32,7 +33,8 @@
                     The United Nations General Assembly Second Committee (also known as the Economic and Financial Committee or ECOFIN) is one of the six main committees of the United Nations General Assembly. It deals with global finance and economic matters.
 
                     The Second Committee meets every year in early October and aims to finish its work by the end of November. All 193 member states of the UN can attend.
-                <p><strong> AGENDA : </strong> -------------------------------- </p>
+								<br>
+								<p><strong> AGENDA : </strong> Agenda Will be Sent by Mail </p>
                 </div>
 			</div>
 
@@ -43,7 +45,8 @@
                 <div class="address-text m-3">
                     The Counter-Terrorism Committee (CTC) was established by Security Council resolution 1373 (2001), which was adopted unanimously on 28 September 2001 in the wake of the 11 September terrorist attacks in the United States.
                     The Committee, comprising all 15 Security Council members, was tasked with monitoring implementation of resolution 1373 (2001), which requested countries to implement a number of measures intended to enhance their legal and institutional ability to counter terrorist activities at home, in their regions, and, around the world.
-                <p><strong> AGENDA : </strong> -------------------------------- </p>
+								<br>
+								<p><strong> AGENDA : </strong>Counter money laundering activities used to finance terrorism</p>
                 </div>
 
 			</div>
@@ -58,7 +61,8 @@
                     The world is in a fragile state. A tipping of balance could result in another war, the outcomes too devastating to imagine. With the build-up of nuclear, biological and radiological weaponry the stakes at risk are the world in which we reside.
 
                     World economy being in the hands of the four major powers: United States of America, USSR, UK and Imperial Japan but their dominance is diminishing from their control due to emergence of newer, developing economies which can lead to economic devastation if markets are not regulated.
-                    <p><strong> AGENDA : </strong> CRISIS </p>
+										<br>
+										<p><strong> AGENDA : </strong> CRISIS </p>
                 </div>
 
 			</div>
