--- a/eb.html
+++ b/eb.html
@@ -11,10 +11,11 @@
 		<a href='eb.html' class='active'> Executive Board </a>
 		<a href='committees.html'> Committees </a>
 		<a href='register.html'> Register </a>
-        <a href='gallery.html'> Gallery </a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-        </a>
+    <a href='gallery.html'> Gallery </a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+    </a>
+		<a href="https://www.freedom-international.in" style="float:right;"> Freedom International </a>
 	</nav>
     <title> FISMUN - Executive Board</title>
 </head>
