--- a/index.html
+++ b/index.html
@@ -43,10 +43,16 @@
                 <h2 id='address-header'> Principal's Address </h2>
                 <br>
                 <div class="card-body">
-                    <img src='assets/principal.jpeg' id="principal-image">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut finibus elit maximus sollicitudin feugiat. In hac habitasse platea dictumst. Cras vitae urna quam. Fusce elementum quam ac erat sagittis mollis. Donec tempus, lacus ut suscipit ullamcorper, enim est pharetra felis, vitae pretium erat leo eu dolor. Praesent enim tellus, viverra sit amet lacus ut, ultrices aliquet tortor. Morbi lacinia sit amet ante ut egestas.
+                    <img src='assets/principal1.png' id="principal-image">
+										The Model United Nations or MUN as it is popularly called is more than just  an extra-curricular activity. It's a process where our children are  able to develop their capabilities through research, debates, negotiations, team work  and public-speaking.
 
-                    Pellentesque a cursus diam. Sed eu dui bibendum, maximus metus ac, convallis felis. Quisque turpis leo, suscipit sed mollis vel, pharetra ac nisl. Maecenas enim augue, ultricies eget egestas a, gravida non risus. Donec tincidunt leo ut odio mattis dapibus. Praesent sollicitudin, libero vitae semper dictum, sem justo malesuada nisl, varius euismod quam libero at lacus. Duis lorem nibh, consectetur id placerat a, ultricies in quam. Pellentesque ac lectus et libero euismod congue a non eros. Fusce nec dolor eget metus ultrices dignissim sed sed nunc. Aliquam erat volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin non est ut enim tempor sagittis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+										Model UN encourages students to learn and creates an awareness about world issues. It is a great  way to become an active and concerned global citizen, especially in this era of globalization, being globally aware is more important than ever.
+										Furthermore Model UN builds confidence, leadership and diplomatic skills .  These are skills that you will need throughout your career, and MUN gives you a chance to practice them while you’re a student. Your MUN experience is an excellent chance to network and to get into colleges of your choice. But above all Mun is an opportunity for  every student to speak! Your voice is being heard your ideas are going global!
+
+										Our students at FIS first took part in a  MUN four years ago after we conducted a  basic workshop.  There has been no looking back since. They have gone on win best delegate or at least a special mention in every MUN they participated. we hope to see more of our juniors continuing to excel.
+										This in house session is an attempt by the seniors to encourage and train their juniors to follow in their footsteps.
+
+										<h5><strong>Mrs Sneha Rai - Principal, Freedom International School</strong></h5>
                 </div>
             </div>
 
