--- a/resources.html
+++ b/resources.html
@@ -10,6 +10,7 @@
 		<a href='committees.html'> Committees </a>
 		<a href='register.html'> Register </a>
 		<a href='resources.html' class='active'> Resources </a>
+		<a href="https://www.freedom-international.in" style="float:right;"> Freedom International </a>
 		<title> FISMUN - Resources</title>
 	</nav>
 </head>
