updated index, fixed grammatical error

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 										Model UN encourages students to learn and creates an awareness about world issues. It is a great  way to become an active and concerned global citizen, especially in this era of globalization, being globally aware is more important than ever.
 										Furthermore Model UN builds confidence, leadership and diplomatic skills .  These are skills that you will need throughout your career, and MUN gives you a chance to practice them while you’re a student. Your MUN experience is an excellent chance to network and to get into colleges of your choice. But above all Mun is an opportunity for  every student to speak! Your voice is being heard your ideas are going global!
 
-										Our students at FIS first took part in a  MUN four years ago after we conducted a  basic workshop.  There has been no looking back since. They have gone on win best delegate or at least a special mention in every MUN they participated. we hope to see more of our juniors continuing to excel.
+										Our students at FIS first took part in a  MUN four years ago after we conducted a  basic workshop.  There has been no looking back since. They have gone on to win Best Delegate or at least a Special Mention in every MUN they participated in. We hope to see more of our juniors continuing to excel.
 										This in house session is an attempt by the seniors to encourage and train their juniors to follow in their footsteps.
 
 										<h5><strong>Mrs Sneha Rai - Principal, Freedom International School</strong></h5>
