updated agenda for ECOSOC

--- a/committees.html
+++ b/committees.html
@@ -34,7 +34,7 @@
 
                     The Second Committee meets every year in early October and aims to finish its work by the end of November. All 193 member states of the UN can attend.
 								<br>
-								<p><strong> AGENDA : </strong> Agenda Will be Sent by Mail </p>
+								<p><strong> AGENDA : </strong> Policies to Prevent Tax Evasion </p>
                 </div>
 			</div>
 
